--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -15,6 +15,8 @@ spec:
                 - path: application-sets/example-apps/*
           # cluster generator, 'child' #2
           - clusters: {}
+  syncPolicy:
+    automated: {}
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
